# llm-research-orchestration

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
k8s/: infer.py  train.py
k8s/configs/: distributed_default.yaml  humset_sft.yaml  mmlu_peft.yaml  mmlu_qlora.yaml  mmlu_sft.yaml  open_instruct_batch_inference.yaml  open_instruct_peft.yaml  open_instruct_qlora.yaml  open_instruct_sft.yaml  open_instruct_sft_13b.yaml  open_instruct_sft_mistral.yaml  text_to_sql_peft.yaml  text_to_sql_qlora.yaml  text_to_sql_sft.yaml  yacheq_peft.yaml  yacheq_qlora.yaml  yacheq_sft.yaml
k8s/yamls/batch_inference/: secrets_template.yaml
k8s/yamls/training/: job_template.yaml
notebooks/: Launch_SFT_jobs_in_the_Notebook_.ipynb  fine_tuning_research.ipynb
src/aihero/research/orchestration/: __init__.py  infer.py  serve.py  train.py
src/aihero/research/orchestration/templates/batch_inference/: job_template.yaml
src/aihero/research/orchestration/templates/training/: job_template.yaml  secrets_template.yaml
