[project]
name = "aihero-research-orchestration"
version = "0.3.1"
description = "Framework for open source research on fine-tuning LLMs"
authors = [
    {name = "Rahul Parundekar", email= "rahul@aihero.studio" },
    {name = "Shankar Ganesan", email = "gshankar.87@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aihero-research-config @ git+https://github.com/ai-hero/llm-research-config.git@main#egg=aihero-research-config",
    "aihero-research-finetuning @ git+https://github.com/ai-hero/llm-research-fine-tuning.git@main#egg=aihero-research-finetuning",
    "codenamize",
    "jinja2",
    "kubernetes",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=22.3",
    "mypy>=0.910",
    "ruff>=0.0.79",
    "blacken-docs>=1.11.0",
    "pyupgrade>=2.29.1",
    "detect-secrets>=1.2.0",
    "tomli>=1.2.3",
    "pre-commit>=2.17.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.black]
line_length = 120
target_version = ['py39']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
src = ["app", "tests"]

[mypy]
files = ["app", "k8s"]
strict_optional = false
warn_unused_ignores = false
